deployment_new_services/udaconnect-locations-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: udaconnect-locations-api
  name: udaconnect-locations-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: udaconnect-locations-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/infrastructure-udaconnect-net: "true"
        io.kompose.service: udaconnect-locations-api
    spec:
      containers:
        - image: 84black84/udaconnect_locations_api:latest
          name: udaconnect-locations-api
          resources: {}
      restartPolicy: Always
status: {}
