deployment_new_services/udaconnect-locations-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: udaconnect-locations-producer
  name: udaconnect-locations-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: udaconnect-locations-producer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/infrastructure-udaconnect-net: "true"
        io.kompose.service: udaconnect-locations-producer
    spec:
      containers:
        - image: 84black84/udaconnect_locations_producer:latest
          name: udaconnect-locations-producer
          resources: {}
      restartPolicy: Always
status: {}
