deployment_new_services/udaconnect-api-connections.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-api-connections
  name: udaconnect-api-connections
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 5001
    nodePort: 30003
  selector:
    service: udaconnect-api-connections
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: udaconnect-api-connections
  name: udaconnect-api-connections
spec:
  replicas: 1
  selector:
    matchLabels:
      service: udaconnect-api-connections
  template:
    metadata:
      labels:
        service: udaconnect-api-connections
    spec:
      containers:
      - image: 84black84/udaconnect_connections_api:latest
        name: udaconnect-api-connections
        imagePullPolicy: Always
      restartPolicy: Always
