deployment_new_services/udaconnect-api-persons.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-api-persons
  name: udaconnect-api-persons
spec:
  ports:
  - name: "5003"
    port: 5003
    targetPort: 5003
    nodePort: 30005
  selector:
    service: udaconnect-api-persons
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: udaconnect-api-persons
  name: udaconnect-api-persons
spec:
  replicas: 1
  selector:
    matchLabels:
      service: udaconnect-api-persons
  template:
    metadata:
      labels:
        service: udaconnect-api-persons
    spec:
      containers:
      - image: 84black84/udaconnect_persons_api:latest
        name: udaconnect-api-persons
        imagePullPolicy: Always
      restartPolicy: Always
