deployment_new_services/udaconnect-locations-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-locations-api
  name: udaconnect-locations-api
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5002
    nodePort: 30004
  selector:
    service: udaconnect-locations-api
  type: NodePort
