deployment_new_services/udaconnect-locations-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-locations-producer
  name: udaconnect-locations-producer
spec:
  ports:
  - name: "5004"
    port: 5004
    targetPort: 5004
    nodePort: 30006
  selector:
    service: udaconnect-locations-producer
  type: NodePort
